--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Site logo -->
     <h1 class="tm-brand">
         <i class="fas fa-mountain fa-2x tm-brand-icon"></i>
-        <span class="tm-brand-text">@cfwfu</span>        
+        <span class="tm-brand-text">Сharity fund «World for Ukrainians»</span>        
     </h1>
 
     <!-- Nav -->
