--- a/index.html
+++ b/index.html
@@ -68,14 +68,13 @@
                 <div class="tm-media">
                     <img src="img/gallery/tn/img-11.jpg" alt="Intro image">
                     <div class="tm-media-body">
-                        <h2><a href="#" class="tm-text-primary">Vertex is a Free CSS Template</a></h2>
+                        <h2><a href="https://www.facebook.com/cfwfu" class="tm-text-primary">Today we supplied our soldiers with some medicine, camouflage net and napkins.</a></h2>
                         <p class="tm-mb-20 tm-text-small">
-                            This is a Responsive HTML5 Template brought to you by Tooplate for
-                            100% free of charge. You can feel free to download, modify, and
-                            use this layout for your websites.
+                            Сегодня снабжали наших солдат лекарствами, 
+                            камуфляжной сеткой и салфетками.
                         </p>
                         <span class="tm-text-secondary tm-media-span tm-text-small">
-                            Friday . 25 June 2021
+                            29 July 2022
                         </span>
                         <hr class="tm-hr tm-mr">
                     </div>
