--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             камуфляжной сеткой и салфетками.
                         </p>
                         <span class="tm-text-secondary tm-media-span tm-text-small">
-                            29 July 2022
+                            29 июля 2022
                         </span>
                         <hr class="tm-hr tm-mr">
                     </div>
@@ -83,11 +83,11 @@
                 <div class="tm-media">
                     <img src="img/gallery/tn/img-12.jpg" alt="Intro image">
                     <div class="tm-media-body">
-                        <h2><a href="#" class="tm-text-primary">Responsive and Parallax Images</a></h2>
+                        <h2><a href="https://www.facebook.com/cfwfu" class="tm-text-primary">Будни украинских солдат</a></h2>
                         <p class="tm-mb-20 tm-text-small">
-                      You are not allowed to re-distribute this template as a ZIP file on any template collection website for the template download purpose. Please <a rel="nofollow" href="https://www.tooplate.com/contact" target="_parent">contact us</a> for more info. </p>
+                        Где-то в Харьковской области</p>
                         <span class="tm-text-secondary tm-media-span tm-text-small">
-                            Monday . 21 June 2021
+                            11 июля 2022
                     </span>
                         <hr class="tm-hr tm-mr">
                     </div>
@@ -96,12 +96,12 @@
                 <div class="tm-media">
                     <img src="img/gallery/tn/img-18.jpg" alt="Intro image">
                     <div class="tm-media-body">
-                        <h2><a href="#" class="tm-text-primary">Do you like this HTML layout?</a></h2>
+                        <h2><a href="https://www.facebook.com/cfwfu" class="tm-text-primary">Недавно купили еще рации для наших защитников!</a></h2>
                         <p class="tm-mb-20 tm-text-small">
-                            This is a custom full-width layout. Gallery page included paging thumbnails with a beautiful hover effect and a larger image pop up in the lightbox.
+                            Недавно купили еще рации для наших защитников!.
                         </p>
                         <span class="tm-text-secondary tm-media-span tm-text-small">
-                            Wednesday . 16 June 2021
+                            Wednesday . 10 июля 2022
                         </span>
                         <hr class="tm-hr tm-mr">
                     </div>
