--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <!-- Site logo -->
     <h1 class="tm-brand">
-        <i class="fas fa-mountain fa-2x tm-brand-icon"></i>
-        <span class="tm-brand-text">Сharity fund «World for Ukrainians»</span>        
+        <img src="img/gallery/tn/logo.png" alt="@cfwfu">
+        <span class="tm-brand-text">Сharity fund «World for Ukrainians» @cfwfu</span>        
     </h1>
 
     <!-- Nav -->
