--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
         <ul id="tm-main-nav">
             <li class="nav-item">                                
                 <a href="#intro" class="nav-link current">
-                    Introduction
+                    Our Facebook
                 </a>
             </li>
             <li class="nav-item">
                 <a href="#services" class="nav-link">
-                    Services
+                    Donation
                 </a>
             </li>
             <li class="nav-item">
@@ -119,11 +119,16 @@
         <div id="services" class="tm-section">
             <!-- Services left -->
             <div class="tm-section-col tm-content">
-                <h2 class="tm-text-primary">Our Services</h2>
-                <p>Credit goes to <strong>Pexels website</strong> for background images and Unsplash website for gallery images used in this Vertex HTML template. Vestibulum quis ultrices ipsum, tempor cursus odio. Donec et nisl sit amet mauris consequat sodales. 
-                </p>
+                <h2 class="tm-text-primary">Donation</h2>
                 <p>
-                    Morbi a sapien vitae nunc mollis efficitur quis eu purus. Donec nec orci pharetra, ullamcorper orci eu, gravida dolor. Morbi at rutrum nibh. Sed a erat vitae ipsum mollis tincidunt sed nec orci.
+Найменування отримувача:
+БО БФ СВІТ ДЛЯ УКРАІНЦІВ
+Код отримувача:
+44740050
+Рахунок отримувача:
+UA533052990000026006031210833
+Назва банку:
+АТ КБ “ПРИВАТБАНК”
                 </p>
                 <div class="tm-text-right">
                     <a href="#gallery" class="tm-btn tm-btn-next">Next page</a>
