--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
             <div class="tm-section-col tm-content">
                 <h2 class="tm-text-primary">Donation</h2>
                 <p> Найменування отримувача: БО БФ СВІТ ДЛЯ УКРАІНЦІВ </p>
-                <p> </p>Код отримувача: 44740050 </p>
-                <p> </p>Рахунок отримувача: UA533052990000026006031210833 </p>
-                <p> </p>Назва банку: АТ КБ “ПРИВАТБАНК” </p>
+                <p> Код отримувача: 44740050 </p>
+                <p> Рахунок отримувача: UA533052990000026006031210833 </p>
+                <p> Назва банку: АТ КБ “ПРИВАТБАНК” </p>
                 
                 <div class="tm-text-right">
                     <a href="#gallery" class="tm-btn tm-btn-next">Next page</a>
