--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
             <!-- Services left -->
             <div class="tm-section-col tm-content">
                 <h2 class="tm-text-primary">Donation</h2>
-                <p> Найменування отримувача: БО БФ СВІТ ДЛЯ УКРАІНЦІВ </p>
-                <p> Код отримувача: 44740050 </p>
-                <p> Рахунок отримувача: UA533052990000026006031210833 </p>
-                <p> Назва банку: АТ КБ “ПРИВАТБАНК” </p>
+                <p> Найменування отримувача: БО БФ СВІТ ДЛЯ УКРАІНЦІВ
+                Код отримувача: 44740050
+                Рахунок отримувача: UA533052990000026006031210833
+                Назва банку: АТ КБ “ПРИВАТБАНК” </p>
                 
                 <div class="tm-text-right">
                     <a href="#gallery" class="tm-btn tm-btn-next">Next page</a>
@@ -135,7 +135,7 @@
                             <i class="fas fa-street-view fa-3x"></i>
                         </div>                        
                         <p>
-                            Fusce mi sapien, faucibus ut tortor a, tempus laoreet magna. Nulla felis ipsum, lobortis eu efficitur eget, malesuada id lacus.
+                            Charitable fund "World for Ukrainians". The link for donations is in comments of the pinned post.
                         </p>
                     </div>
                     <div class="tm-col">
@@ -143,7 +143,7 @@
                             <i class="fas fa-bullseye fa-3x"></i>
                         </div>                        
                         <p>
-                            Nullam pellentesque accumsan hendrerit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+                            Charitable fund "World for Ukrainians". The link for donations is in comments of the pinned post.
                         </p>
                     </div>
                 </div>                
