--- a/index.html
+++ b/index.html
@@ -135,7 +135,14 @@
                             <i class="fas fa-street-view fa-3x"></i>
                         </div>                        
                         <p>
-                            Charitable fund "World for Ukrainians". The link for donations is in comments of the pinned post.
+                            Найменування отримувача:
+                            БО БФ СВІТ ДЛЯ УКРАІНЦІВ
+                            Код отримувача:
+                            44740050
+                            Рахунок отримувача:
+                            UA533052990000026006031210833
+                            Назва банку:
+                            АТ КБ “ПРИВАТБАНК”
                         </p>
                     </div>
                     <div class="tm-col">
@@ -143,7 +150,14 @@
                             <i class="fas fa-bullseye fa-3x"></i>
                         </div>                        
                         <p>
-                            Charitable fund "World for Ukrainians". The link for donations is in comments of the pinned post.
+                            Найменування отримувача:
+                            БО БФ СВІТ ДЛЯ УКРАІНЦІВ
+                            Код отримувача:
+                            44740050
+                            Рахунок отримувача:
+                            UA533052990000026006031210833
+                            Назва банку:
+                            АТ КБ “ПРИВАТБАНК”
                         </p>
                     </div>
                 </div>                
