--- a/index.html
+++ b/index.html
@@ -120,10 +120,7 @@
             <!-- Services left -->
             <div class="tm-section-col tm-content">
                 <h2 class="tm-text-primary">Donation</h2>
-                <p> Найменування отримувача: БО БФ СВІТ ДЛЯ УКРАІНЦІВ
-                Код отримувача: 44740050
-                Рахунок отримувача: UA533052990000026006031210833
-                Назва банку: АТ КБ “ПРИВАТБАНК” </p>
+                <p> Найменування отримувача: БО БФ СВІТ ДЛЯ УКРАІНЦІВ Код отримувача: 44740050 Рахунок отримувача: UA533052990000026006031210833 Назва банку: АТ КБ “ПРИВАТБАНК” </p>
                 
                 <div class="tm-text-right">
                     <a href="#gallery" class="tm-btn tm-btn-next">Next page</a>
