--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                 <div class="mapouter">
                     <div class="gmap-canvas">
                         <iframe width="100%" height="420" id="gmap_canvas"
-                            src="https://maps.google.com/maps?q=Av.+L%C3%BAcio+Costa,+Rio+de+Janeiro+-+RJ,+Brazil&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                            src="https://goo.gl/maps/u5acZhykTC6TsgKS8"
                             frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                     </div>
                 </div>
