--- a/index.html
+++ b/index.html
@@ -459,9 +459,9 @@
                     </div>
                 </form>
                 <footer class="tm-copyright tm-text-small">
-                    Copyright 2021 Vertex Company 
+                    Copyright 2022
                     
-                    - Design: <a rel="nofollow" href="https://www.tooplate.com" class="tm-text-link" target="_parent">Tooplate</a>
+                    - Design: <a rel="nofollow" href="" class="tm-text-link" target="_parent">Jeff-Set</a>
                 </footer>              
             </div>
             
