--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                 <div class="mapouter">
                     <div class="gmap-canvas">
                         <iframe width="100%" height="420" id="gmap_canvas"
-                            src="<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d164159.65780558897!2d36.1622443!3d49.9927097!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a09f63ab0f8b%3A0x2d4c18681aa4be0a!2z0KXQsNGA0YzQutC-0LIsINCl0LDRgNGM0LrQvtCy0YHQutCw0Y8g0L7QsdC70LDRgdGC0Yw!5e0!3m2!1sru!2sua!4v1659536706101!5m2!1sru!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d164159.65780558897!2d36.1622443!3d49.9927097!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4127a09f63ab0f8b%3A0x2d4c18681aa4be0a!2z0KXQsNGA0YzQutC-0LIsINCl0LDRgNGM0LrQvtCy0YHQutCw0Y8g0L7QsdC70LDRgdGC0Yw!5e0!3m2!1sru!2sua!4v1659536895553!5m2!1sru!2sua"
                             frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                     </div>
                 </div>
