--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     
     <!-- Title Tag -->
-    <title>November</title>
+    <title>Сharity fund «World for Ukrainians»</title>
 <!--
 
     <!-- <<Mobile Viewport Code>> -->
