--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 	            <div class="Center">
                     <!--  \\ Begin Left Side -->
                     <div class="leftside">
-                        <h3>Responsive<span>Mobile Friendly</span></h3>
-                        <p>November is a professional website template that is responsive and mobile friendly for any device. This template is provided by templatemo.com</p>
+                        <h3>Сharity fund<span>«World for Ukrainians»</span></h3>
+                        <p>Charitable fund "World for Ukrainians" The link for donations is in comments of the pinned post.</p>
                         <a href="#about">MORE DETAILS</a>
                     </div>                        								
                     <!--  // End Left Side // -->
