--- a/index.html
+++ b/index.html
@@ -324,14 +324,14 @@
                                     990 Proin Gravida Street, Aliquet Snean Tate,<br>Lincoln Way, San Francisco, California.
                                 </address>	
                                 <address class="Number">
-                                    (+001) 001 002 0034, (+002) 009 008 0760<br>(+003) 456 050 0670 
+                                    067 570 3230<br>067 570 3230
                                 </address>	
                                 <address class="Email">
-                                    <a href="mailto:info@november.com">info@november.com</a>
+                                    <a href="mailto:charitywfu@gmail.com">charitywfu@gmail.com</a>
                                 </address>	
                                 <div class="clear"></div>
                                 <ul>
-                                    <li><a rel="nofollow" href="http://www.facebook.com/templatemo"
+                                    <li><a rel="nofollow" href="https://www.facebook.com/cfwfu/"
                                    target="_parent"><img src="img/facebook-icn.png" alt="image"></a></li>
                                     <li><a href="#"><img src="img/twitter-icn.png" alt="image"></a></li>
                                     <li><a href="#"><img src="img/google-plus-icn.png" alt="image"></a></li>
@@ -342,7 +342,7 @@
                     <!-- \\ Begin Footer \\-->
                     <footer>
                         <div class="Cntr">                
-                            <p>COPYRIGHT © 2084 COMPANY NAME. DESIGN: <a rel="nofollow" href="http://www.templatemo.com" target="_parent">TEMPLATEMO</a></p>
+                            <p>COPYRIGHT © 2022 COMPANY NAME. DESIGN:JEFF-SET</p>
                         </div>
                     </footer>
                     <!-- // End Footer // -->
