--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                         <div class="Rightside">
                             <h3>Get in touch !</h3>
                                 <address>
-                                    990 Proin Gravida Street, Aliquet Snean Tate,<br>Lincoln Way, San Francisco, California.
+                                    Харьков<br>Некоммерческая организация
                                 </address>	
                                 <address class="Number">
                                     067 570 3230<br>067 570 3230
