--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                     <!-- \\ Begin Footer \\-->
                     <footer>
                         <div class="Cntr">                
-                            <p>COPYRIGHT © 2022 COMPANY NAME. DESIGN:JEFF-SET</p>
+                            <p>COPYRIGHT © 2022 cfwfu</p>
                         </div>
                     </footer>
                     <!-- // End Footer // -->
