--- a/index.html
+++ b/index.html
@@ -129,14 +129,14 @@
                 <h2>Donate</h2>
                 <p> Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent<br> taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>		
                 <div class="Line"></div>
-                Найменування отримувача:
+                <h3></h2>Найменування отримувача:
 БО БФ СВІТ ДЛЯ УКРАІНЦІВ
 Код отримувача:
 44740050
 Рахунок отримувача:
 UA533052990000026006031210833
 Назва банку:
-АТ КБ “ПРИВАТБАНК”
+АТ КБ “ПРИВАТБАНК”</h3>
             </div>                
         </div>
         <!-- // End Services Section // -->
