--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                                     <figure><img src="img/Slider-img1.jpg" alt="image"></figure>
                                     <div class="text">                      								
                                         <div class="Lorem">
-                                            <p>lorem quis bibendum <span>Necagittis Nibel</span></p>
+                                            <p>СHARITY FUND<span>«World for Ukrainians»</span></p>
                                         </div>
                                     </div>
                                 </div>
@@ -96,7 +96,7 @@
                                     <figure><img src="img/Slider-img2.jpg" alt="image"></figure>
                                     <div class="text">                       								
                                         <div class="Lorem">
-                                            <p>lorem quis bibendum<span>Necagittis Nibel</span></p>
+                                            <p>«World for Ukrainians»<span>СHARITY FUND</span></p>
                                         </div>
                                     </div>
                                 </div>
