--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
                 <h2>Donate</h2>
                 <p> Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent<br> taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>		
                 <div class="Line"></div>
-                <h3>Найменування отримувача: БО БФ СВІТ ДЛЯ УКРАІНЦІВ
-                    <p>Код отримувача: 44740050</p>
-                    <p>Рахунок отримувача: UA533052990000026006031210833</p>
-                    <p>Назва банку: АТ КБ “ПРИВАТБАНК”</p></h3>
+                <h3>Найменування отримувача: БО БФ СВІТ ДЛЯ УКРАІНЦІВ</h3>
+                <h3>Код отримувача: 44740050</h3>
+                <h3>Рахунок отримувача: UA533052990000026006031210833</h3>
+                <h3>Назва банку: АТ КБ “ПРИВАТБАНК”</p></h3>
             </div>                
         </div>
         <!-- // End Services Section // -->
