--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
             <!-- \\ Begin About Section \\ -->
             <div class="About_sec" id="about">
                 <div class="Center">            	
-                    <h2>about us</h2>            		
+                    <h2>About us</h2>
+                    <img src="img/LOGO.png" alt="Logo">           		
                     <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit<br> amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
                     <div class="Line"></div>
                 </div>
@@ -127,7 +128,7 @@
         <div class="Services_sec" id="services">
             <div class="Center">
                 <h2>Donate</h2>
-                <img src="img/LOGO.png" alt="image" class="Shadow">
+                <img src="img/LOGO.png" alt="Logo">
                 <p> Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent<br> taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>		
                 <div class="Line"></div>
                 <h3>Найменування отримувача: БО БФ СВІТ ДЛЯ УКРАІНЦІВ</h3>
@@ -141,6 +142,7 @@
         <div class="Pricing_sec" id="pricing">
             <div class="Center">
                 <h2>Pricing</h2>
+                <img src="img/LOGO.png" alt="Logo">
                 <p>All plans come with unlimited disk space. Our support can be as quick as 15 minutes to get a response. Sed non<br>
                 mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu.</p>
                 <div class="Line"></div>
