--- a/index.html
+++ b/index.html
@@ -117,8 +117,7 @@
             <!-- \\ Begin About Section \\ -->
             <div class="About_sec" id="about">
                 <div class="Center">            	
-                    <h2>About us</h2>
-                    <img src="img/LOGO.png" alt="Logo">           		
+                    <h2>About us <img src="img/LOGO.png" alt="Logo"></h2>           		
                     <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit<br> amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
                     <div class="Line"></div>
                 </div>
