--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <!-- \\ Begin About Section \\ -->
             <div class="About_sec" id="about">
                 <div class="Center">            	
-                    <h2>About us <img src="img/LOGO.png" alt="Logo"></h2>           		
+                    <h2>About us</h2>           		
                     <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit<br> amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
                     <div class="Line"></div>
                 </div>
@@ -141,7 +141,6 @@
         <div class="Pricing_sec" id="pricing">
             <div class="Center">
                 <h2>Pricing</h2>
-                <img src="img/LOGO.png" alt="Logo">
                 <p>All plans come with unlimited disk space. Our support can be as quick as 15 minutes to get a response. Sed non<br>
                 mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu.</p>
                 <div class="Line"></div>
