--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
                         <!-- // End Left Side // -->
                         <!-- \\ Begin Right Side \\ -->
                         <div class="Rightside">
-                            <h3>Get in touch !</h3>
+                            <h3>СHARITY FUND
+                                «WORLD FOR UKRAINIANS»</h3>
                                 <address>
                                     Харьков<br>Некоммерческая организация
                                 </address>	
