--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                 <span class="menu-item-bg"></span>
                             </li>
                             <li>
-                                <a href="#pricing">Pricing</a>
+                                <a href="#pricing">Mission</a>
                                 <span class="menu-item-bg"></span>
                             </li>
                             <li>
@@ -140,7 +140,7 @@
         <!-- \\ Begin Pricing Section \\ -->
         <div class="Pricing_sec" id="pricing">
             <div class="Center">
-                <h2>Pricing</h2>
+                <h2>Mission</h2>
                 <p>All plans come with unlimited disk space. Our support can be as quick as 15 minutes to get a response. Sed non<br>
                 mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu.</p>
                 <div class="Line"></div>
