--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="Services_sec" id="services">
             <div class="Center">
                 <h2>Donate</h2>
-                <img src="img/LOGO.png" alt="Logo">
+                <img src="img/LOGO.png" alt="Logo" float="left">
                 <p> Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent<br> taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>		
                 <div class="Line"></div>
                 <h3>Найменування отримувача: БО БФ СВІТ ДЛЯ УКРАІНЦІВ</h3>
