--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
         <div class="Services_sec" id="services">
             <div class="Center">
                 <h2>Donate</h2>
-                <img src="img/LOGO.png" alt="Logo">
-                <p> <img src="img/LOGO.png" alt="Logo"> Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent<br> taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>		
+                <img src="img/LOGO.png" alt="Logo" text-align="center">
+                <p> Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent<br> taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>		
                 <div class="Line"></div>
                 <h3>Найменування отримувача: БО БФ СВІТ ДЛЯ УКРАІНЦІВ</h3>
                 <h3>Код отримувача: 44740050</h3>
