--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
             <!-- \\ Begin About Section \\ -->
             <div class="About_sec" id="about">
                 <div class="Center">            	
-                    <h2>About us</h2>           		
+                    <h2>About us</h2>
+                    <img src="img/LOGO.png" alt="Logo" text-align="center">           		
                     <p>Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit<br> amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio.</p>
                     <div class="Line"></div>
                 </div>
@@ -141,6 +142,7 @@
         <div class="Pricing_sec" id="pricing">
             <div class="Center">
                 <h2>Mission</h2>
+                <img src="img/LOGO.png" alt="Logo" text-align="center">
                 <p>All plans come with unlimited disk space. Our support can be as quick as 15 minutes to get a response. Sed non<br>
                 mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu.</p>
                 <div class="Line"></div>
@@ -152,6 +154,7 @@
             <div class="Contactside">
                 <div class="Center">
                     <h2>contact us</h2>
+                    <img src="img/LOGO.png" alt="Logo" text-align="center">
                     <p>Sed non neque elit. Sed ut imperdiet nisi. Proin condimentum fermentum nunc. Etiam pharetra, erat sed fermentum<br>
                     feugiat velit mauris egestas quamut aliquam massa nisl quis neque. Suspendisse in orci enim.</p>
                     <div class="Line"></div>
