--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-777
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <title>Тестовая страница со шрифтом Rubik Doodle Shadow</title>
+  <link rel="stylesheet" href="css.css">
+  <style>
+    body {
+      background: #f8f8f8;
+      padding: 40px;
+      color: #222;
+    }
+    h1, h2 {
+      color: #18DFA6;
+      font-family: 'Rubik Doodle Shadow', Arial, sans-serif;
+    }
+    p, button {
+      font-family: 'Rubik Doodle Shadow', Arial, sans-serif;
+      font-size: 22px;
+    }
+    .btn {
+      background: #18DFA6;
+      color: #fff;
+      border: none;
+      padding: 10px 24px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 20px;
+      margin-top: 20px;
+      font-family: 'Rubik Doodle Shadow', Arial, sans-serif;
+      transition: background 0.2s;
+    }
+    .btn:hover {
+      background: #13b487;
+    }
+  </style>
+</head>
+<body>
+  <h1>Проверка шрифта Rubik Doodle Shadow</h1>
+  <h2>Этот заголовок тоже с новым шрифтом!</h2>
+  <p>
+    Если вы видите этот текст необычным декоративным шрифтом — значит, всё работает правильно.<br>
+    Вы можете использовать этот шрифт в любом месте на сайте, подключив css.css.
+  </p>
+  <button class="btn">Тестовая кнопка</button>
+</body>
+</html>
