--- a/index.html
+++ b/index.html
@@ -1,47 +1,32 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Тестовая страница со шрифтом Rubik Doodle Shadow</title>
+  <title>JEFF-SET: Typography & Modes Demo</title>
   <link rel="stylesheet" href="css.css">
-  <style>
-    body {
-      background: #f8f8f8;
-      padding: 40px;
-      color: #222;
-    }
-    h1, h2 {
-      color: #18DFA6;
-      font-family: 'Rubik Doodle Shadow', Arial, sans-serif;
-    }
-    p, button {
-      font-family: 'Rubik Doodle Shadow', Arial, sans-serif;
-      font-size: 22px;
-    }
-    .btn {
-      background: #18DFA6;
-      color: #fff;
-      border: none;
-      padding: 10px 24px;
-      border-radius: 4px;
-      cursor: pointer;
-      font-size: 20px;
-      margin-top: 20px;
-      font-family: 'Rubik Doodle Shadow', Arial, sans-serif;
-      transition: background 0.2s;
-    }
-    .btn:hover {
-      background: #13b487;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Проверка шрифта Rubik Doodle Shadow</h1>
-  <h2>Этот заголовок тоже с новым шрифтом!</h2>
-  <p>
-    Если вы видите этот текст необычным декоративным шрифтом — значит, всё работает правильно.<br>
-    Вы можете использовать этот шрифт в любом месте на сайте, подключив css.css.
-  </p>
-  <button class="btn">Тестовая кнопка</button>
+  <div class="header-logo">JEFF-SET</div>
+  <main>
+    <h1>Heading 1 (h1)</h1>
+    <h2>Heading 2 (h2)</h2>
+    <h3>Heading 3 (h3)</h3>
+    <h4>Heading 4 (h4)</h4>
+    <h5>Heading 5 (h5)</h5>
+    <h6>Heading 6 (h6)</h6>
+    <p>
+      This is a sample paragraph to demonstrate your chosen font and color palette.<br>
+      Light and dark mode are automatic based on your system settings.
+    </p>
+    <ul>
+      <li>Unordered list item 1</li>
+      <li>Unordered list item 2</li>
+    </ul>
+    <ol>
+      <li>Ordered list item 1</li>
+      <li>Ordered list item 2</li>
+    </ol>
+  </main>
 </body>
 </html>
