--- a/index.html
+++ b/index.html
@@ -13,25 +13,16 @@
   </form>
   <div class="header-logo">JEFF-SET</div>
   <main>
-    <h1>Heading 1 (h1)</h1>
-    <h2>Heading 2 (h2)</h2>
-    <h3>Heading 3 (h3)</h3>
-    <h4>Heading 4 (h4)</h4>
-    <h5>Heading 5 (h5)</h5>
-    <h6>Heading 6 (h6)</h6>
+    <h1>Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
     <p>
-      This is a sample paragraph to demonstrate your chosen font and color palette.<br>
-      Use the toggle above to switch between Light and Dark mode.<br>
-      Only two colors: #080808 (black) and #fcf9f6 (almost white).
+      This is a sample paragraph to check the theme, headings and toggle.<br>
+      All interface and content is now in English.
     </p>
-    <ul>
-      <li>Unordered list item 1</li>
-      <li>Unordered list item 2</li>
-    </ul>
-    <ol>
-      <li>Ordered list item 1</li>
-      <li>Ordered list item 2</li>
-    </ol>
   </main>
   <script src="js.js"></script>
 </body>
