--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
     <h5>Heading 5</h5>
     <h6>Heading 6</h6>
     <p>
-      This is a sample paragraph to check the theme, headings and toggle.<br>
-      All interface and content is now in English.
+      This is a sample paragraph to check the theme, headings, logo and toggle.<br>
+      All interface and content is in English.
     </p>
   </main>
+  <footer>
+    &copy; 2025 JEFF-SET. All rights reserved.
+  </footer>
   <script src="js.js"></script>
 </body>
 </html>
