--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             This is a sample paragraph to check the theme, headings, logo and toggle.<br>
             All interface and content is in English.
         </p>
+        <button class="btn">Test Button</button>
     </main>
     <footer>
         &copy; 2025 JEFF-SET. All rights reserved.
