--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <form class="theme-toggle" autocomplete="off">
-    <input type="checkbox" id="toggle-dark" aria-label="Toggle dark mode">
-    <label for="toggle-dark" class="theme-toggle-label"></label>
-  </form>
+  <div class="topbar">
+    <form class="theme-toggle" autocomplete="off">
+      <input type="checkbox" id="toggle-dark" aria-label="Toggle dark mode">
+      <label for="toggle-dark" class="theme-toggle-label"></label>
+    </form>
+    <!-- Add more elements here if needed -->
+  </div>
   <div class="header-logo">JEFF-SET</div>
   <main>
     <h1>Heading 1</h1>
@@ -20,10 +23,11 @@
     <h5>Heading 5</h5>
     <h6>Heading 6</h6>
     <p>
-      This is a sample paragraph to check the theme, headings, logo and toggle.<br>
-      All interface and content is in English.
+      My project on 
+      <a href="https://github.com/JEFF-SET/jeff-set.github.io" class="main-link" target="_blank">GitHub</a>,
+      Copilot – <a href="https://jeff-set.com" class="main-link" target="_blank"><b>jeff-set.com</b></a>
     </p>
-    <button class="btn">Test Button</button>
+    <a href="https://jeff-set.com" class="btn" target="_blank"><b>Submit</b></a>
   </main>
   <footer>
     &copy; 2025 JEFF-SET. All rights reserved.
