--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JEFF-SET: Theme Switch Demo</title>
-  <link rel="stylesheet" href="jeff-set.css">
+  <link rel="stylesheet" href="css/jeff-set.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -12,7 +12,6 @@
       <input type="checkbox" id="toggle-dark" aria-label="Toggle dark mode">
       <label for="toggle-dark" class="theme-toggle-label"></label>
     </form>
-    <!-- Add more elements here if needed -->
   </div>
   <div class="header-logo">JEFF-SET</div>
   <main>
@@ -32,6 +31,6 @@
   <footer>
     &copy; 2025 JEFF-SET. All rights reserved.
   </footer>
-  <script src="jeff-set.js"></script>
+  <script src="js/jeff-set.js"></script>
 </body>
 </html>
