--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JEFF-SET: Theme Switch Demo</title>
   <link rel="stylesheet" href="css/jeff-set.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="js/logo-anim.js"></script>
 </head>
+
 <body>
   <div class="topbar">
     <form class="theme-toggle" autocomplete="off">
@@ -15,22 +19,23 @@
   </div>
   <div class="header-logo">JEFF-SET</div>
   <main>
-    <h1>Heading 1</h1>
+    <h1>User Friendly Design/Development</h1>
     <h2>Heading 2</h2>
     <h3>Heading 3</h3>
     <h4>Heading 4</h4>
     <h5>Heading 5</h5>
     <h6>Heading 6</h6>
     <p>
-      My project on 
+      My project on
       <a href="https://github.com/JEFF-SET/jeff-set.github.io" class="main-link" target="_blank">GitHub</a>,
       Copilot – <a href="https://jeff-set.com" class="main-link" target="_blank"><b>jeff-set.com</b></a>
     </p>
     <a href="https://jeff-set.com" class="btn" target="_blank"><b>Submit</b></a>
   </main>
   <footer>
-    &copy; 2025 JEFF-SET. All rights reserved.
+    &copy; 2025 JEFF-SET&Vitalii K. All rights reserved.
   </footer>
   <script src="js/jeff-set.js"></script>
 </body>
+
 </html>
