--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <title>JEFF-SET: Theme Switch Demo</title>
   <link rel="stylesheet" href="css/jeff-set.css">
+  <link rel="stylesheet" href="css/logo-anim.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="js/logo-anim.js"></script>
 </head>
-
 <body>
   <div class="topbar">
     <form class="theme-toggle" autocomplete="off">
@@ -17,7 +16,32 @@
       <label for="toggle-dark" class="theme-toggle-label"></label>
     </form>
   </div>
-  <div class="header-logo">JEFF-SET</div>
+  
+  <div class="logo-animated-wrap">
+    <svg width="540" height="110" viewBox="0 0 540 110">
+      <!-- J -->
+      <text class="logo-letter letter-j" x="10" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">J</text>
+      <!-- E -->
+      <text class="logo-letter letter-e-1" x="70" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">E</text>
+      <!-- F -->
+      <text class="logo-letter letter-f" x="130" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">F</text>
+      <!-- F -->
+      <text class="logo-letter letter-f2" x="190" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">F</text>
+      <!-- - -->
+      <text class="logo-letter letter-dash" x="250" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">-</text>
+      <!-- S -->
+      <text class="logo-letter letter-s" x="290" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">S</text>
+      <!-- E -->
+      <text class="logo-letter letter-e-2" x="350" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">E</text>
+      <!-- T -->
+      <text class="logo-letter letter-t" x="410" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">T</text>
+    </svg>
+    <div class="tagline">
+      <p class="icon">▲</p>
+      <p class="filler">User Friendly Design/Development</p>
+    </div>
+  </div>
+
   <main>
     <h1>User Friendly Design/Development</h1>
     <h2>Heading 2</h2>
@@ -26,16 +50,15 @@
     <h5>Heading 5</h5>
     <h6>Heading 6</h6>
     <p>
-      My project on
+      My project on 
       <a href="https://github.com/JEFF-SET/jeff-set.github.io" class="main-link" target="_blank">GitHub</a>,
       Copilot – <a href="https://jeff-set.com" class="main-link" target="_blank"><b>jeff-set.com</b></a>
     </p>
     <a href="https://jeff-set.com" class="btn" target="_blank"><b>Submit</b></a>
   </main>
   <footer>
-    &copy; 2025 JEFF-SET&Vitalii K. All rights reserved.
+    &copy; 2025 JEFF-SET &amp; Vitalii K. All rights reserved.
   </footer>
   <script src="js/jeff-set.js"></script>
 </body>
-
 </html>
