--- a/index.html
+++ b/index.html
@@ -18,25 +18,21 @@
   </div>
   
   <div class="logo-animated-wrap">
-    <svg width="540" height="110" viewBox="0 0 540 110">
-      <!-- J -->
-      <text class="logo-letter letter-j" x="10" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">J</text>
-      <!-- E -->
-      <text class="logo-letter letter-e-1" x="70" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">E</text>
-      <!-- F -->
-      <text class="logo-letter letter-f" x="130" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">F</text>
-      <!-- F -->
-      <text class="logo-letter letter-f2" x="190" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">F</text>
-      <!-- - -->
-      <text class="logo-letter letter-dash" x="250" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">-</text>
-      <!-- S -->
-      <text class="logo-letter letter-s" x="290" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">S</text>
-      <!-- E -->
-      <text class="logo-letter letter-e-2" x="350" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">E</text>
-      <!-- T -->
-      <text class="logo-letter letter-t" x="410" y="85" font-size="90" font-family="'Rubik Doodle Shadow', cursive">T</text>
+    <svg class="logo-svg" width="540" height="110" viewBox="0 0 540 110">
+      <!-- Квадратная рамка -->
+      <rect class="logo-border" x="0" y="10" width="100" height="100" rx="12" fill="none" stroke="#d0c4b3" stroke-width="6"/>
+      <!-- J всегда видна -->
+      <text class="logo-letter letter-j" x="30" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">J</text>
+      <!-- Остальные буквы, скрыты до hover -->
+      <text class="logo-letter letter-e" x="110" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">E</text>
+      <text class="logo-letter letter-f" x="170" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">F</text>
+      <text class="logo-letter letter-f2" x="230" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">F</text>
+      <text class="logo-letter letter-dash" x="290" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">-</text>
+      <text class="logo-letter letter-s" x="330" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">S</text>
+      <text class="logo-letter letter-e2" x="390" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">E</text>
+      <text class="logo-letter letter-t" x="450" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">T</text>
     </svg>
-    <div class="tagline">
+    <div class="logo-tagline">
       <p class="icon">▲</p>
       <p class="filler">User Friendly Design/Development</p>
     </div>
