--- a/index.html
+++ b/index.html
@@ -18,19 +18,20 @@
   </div>
   
   <div class="logo-animated-wrap">
-    <svg class="logo-svg" width="540" height="110" viewBox="0 0 540 110">
-      <!-- Квадратная рамка -->
-      <rect class="logo-border" x="0" y="10" width="100" height="100" rx="12" fill="none" stroke="#d0c4b3" stroke-width="6"/>
-      <!-- J всегда видна -->
-      <text class="logo-letter letter-j" x="30" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">J</text>
-      <!-- Остальные буквы, скрыты до hover -->
-      <text class="logo-letter letter-e" x="110" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">E</text>
-      <text class="logo-letter letter-f" x="170" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">F</text>
-      <text class="logo-letter letter-f2" x="230" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">F</text>
-      <text class="logo-letter letter-dash" x="290" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">-</text>
-      <text class="logo-letter letter-s" x="330" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">S</text>
-      <text class="logo-letter letter-e2" x="390" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">E</text>
-      <text class="logo-letter letter-t" x="450" y="85" font-size="70" font-family="'Rubik Doodle Shadow', cursive">T</text>
+    <svg class="logo-svg" width="540" height="120" viewBox="0 0 540 120">
+      <!-- Квадратная рамка всегда на всю ширину логотипа -->
+      <rect class="logo-border" x="0" y="10" width="540" height="100" rx="18"/>
+      <!-- J всегда видна и по центру квадрата -->
+      <text class="logo-letter letter-j" x="270" y="87" text-anchor="middle"
+            font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">J</text>
+      <!-- Остальные буквы (скрыты до hover) -->
+      <text class="logo-letter letter-e" x="85" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">E</text>
+      <text class="logo-letter letter-f" x="155" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">F</text>
+      <text class="logo-letter letter-f2" x="225" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">F</text>
+      <text class="logo-letter letter-dash" x="295" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">-</text>
+      <text class="logo-letter letter-s" x="345" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">S</text>
+      <text class="logo-letter letter-e2" x="415" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">E</text>
+      <text class="logo-letter letter-t" x="485" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">T</text>
     </svg>
     <div class="logo-tagline">
       <p class="icon">▲</p>
