--- a/index.html
+++ b/index.html
@@ -19,24 +19,20 @@
   
   <div class="logo-animated-wrap">
     <svg class="logo-svg" width="540" height="120" viewBox="0 0 540 120">
-      <!-- Квадратная рамка всегда на всю ширину логотипа -->
-      <rect class="logo-border" x="0" y="10" width="540" height="100" rx="18"/>
-      <!-- J всегда видна и по центру квадрата -->
-      <text class="logo-letter letter-j" x="270" y="87" text-anchor="middle"
+      <!-- Квадратная рамка -->
+      <rect class="logo-border" x="0" y="10" width="100" height="100"/>
+      <!-- J — всегда по центру квадрата -->
+      <text class="logo-letter letter-j" x="50" y="87" text-anchor="middle"
             font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">J</text>
-      <!-- Остальные буквы (скрыты до hover) -->
-      <text class="logo-letter letter-e" x="85" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">E</text>
-      <text class="logo-letter letter-f" x="155" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">F</text>
-      <text class="logo-letter letter-f2" x="225" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">F</text>
-      <text class="logo-letter letter-dash" x="295" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">-</text>
-      <text class="logo-letter letter-s" x="345" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">S</text>
-      <text class="logo-letter letter-e2" x="415" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">E</text>
-      <text class="logo-letter letter-t" x="485" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">T</text>
+      <!-- Остальные буквы, скрыты до hover -->
+      <text class="logo-letter letter-e" x="120" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">E</text>
+      <text class="logo-letter letter-f" x="190" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">F</text>
+      <text class="logo-letter letter-f2" x="260" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">F</text>
+      <text class="logo-letter letter-dash" x="330" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">-</text>
+      <text class="logo-letter letter-s" x="370" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">S</text>
+      <text class="logo-letter letter-e2" x="440" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">E</text>
+      <text class="logo-letter letter-t" x="510" y="87" font-size="80" font-family="'Rubik', Arial, sans-serif" font-weight="700">T</text>
     </svg>
-    <div class="logo-tagline">
-      <p class="icon">▲</p>
-      <p class="filler">User Friendly Design/Development</p>
-    </div>
   </div>
 
   <main>
